--- a/application/hackgame/view/start/include/header.html
+++ b/application/hackgame/view/start/include/header.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <!-- <title>HackGame - [[title]]</title> -->
+    <title>HackGame - [[title]]</title>
     <link href="{$Think.MY_ROOT_URL}/public/static/hackgame/start/css/style.css" rel="stylesheet">
 </head>
     
