--- a/application/core/view/user/login.html
+++ b/application/core/view/user/login.html
@@ -9,17 +9,35 @@
         text-align: left;
         font-size: 14px;
         color: #aaa;
+        margin-top: 20px;
+        padding-top: 20px;
+    }
+    .app p:nth-child(2) input {
+        width: calc(160px + 95px);
+    }
+    .app p:nth-child(3) input[type=text] {
+        width: 170px;
+    }
+    .app p:nth-child(3) input[type=button] {
+        width: 80px;
     }
     .app p:nth-child(5) {
         text-align: center;
     }
     .app p:nth-child(5) input {
-        width: 200px;
+        width: 260px;
+    }
+    .app input {
+        height: 23px;
+    }
+    .app input[type=button] {
+        height: 29px;
     }
     .msg {
         text-align: center;
         font-size: 14px;
         color: #aaa;
+        min-height: 20px;
     }
 </style>
 <body>
