--- a/application/core/view/user/login.html
+++ b/application/core/view/user/login.html
@@ -1,5 +1,9 @@
 {include file="include/header" title="登录 or  注册" /}
 <style type="text/css">
+    .app>.title {
+        text-align: center;
+        font-size: 30px;
+    }
     .app>.from {
         position: relative;
         left: calc(50% - 175px);
